# mosaic

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
resources/: credentials_example.txt  credentials_template.txt
src/: CMakeLists.txt  Webcam.cpp  Webcam.h  Webcam.hpp  globalVars.hpp  mail.cpp  mail.hpp  mailDialog.cpp  mailDialog.hpp  main.cpp  mainwindow.cpp  mainwindow.cpp.orig  mainwindow.hpp  mollusc.cpp  mollusc.hpp  molluscimage.cpp  molluscimage.hpp  molluscpalette.cpp  molluscpalette.hpp  molluscview.cpp  molluscview.hpp  mosaic.cpp  mosaic.hpp  sidebar.cpp  sidebar.hpp  wikiretriever.cpp  wikiretriever.h
src/algorithms/: floyd-steinberg.cpp  floyd-steinberg.hpp  voronoi.cpp  voronoi.hpp
src/helpers/: boundingbox.cpp  boundingbox.hpp  imageloader.cpp  imageloader.hpp  imageloaderthread.cpp  imageloaderthread.hpp  painter.cpp  painter.hpp  positionGenerator.cpp  positionGenerator.hpp
